fix: adjust globe position and zoom out to prevent clipping

--- a/nuclear_ai/style.css
+++ b/nuclear_ai/style.css
@@ -15,7 +15,7 @@
 #globe-container {
   position: absolute;
   bottom: -280px;
-  left: 700px;
+  left: 650px;
   width: 1100px;
   height: 1100px;
   z-index: 0;
